# sodiumoxide

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: default.yml
src/: base64.rs  hex.rs  lib.rs  newtype_macros.rs  padding.rs  randombytes.rs  utils.rs  version.rs
src/crypto/: nonce.rs
src/crypto/aead/: aead_macros.rs  aes256gcm.rs  chacha20poly1305.rs  chacha20poly1305_ietf.rs  mod.rs  xchacha20poly1305_ietf.rs
src/crypto/auth/: hmacsha256.rs  hmacsha512.rs  hmacsha512256.rs  mod.rs
src/crypto/box_/: mod.rs
src/crypto/secretbox/: mod.rs  xsalsa20poly1305.rs
src/crypto/sign/: ed25519.rs  mod.rs
