[package]
description = "Fast cryptographic library for Rust. Drop in replacement for sodiumoxide with less chlorides and more oxides"
documentation = "https://docs.rs/sodiumoxide"
keywords = ["crypto", "NaCl", "libsodium", "RustCrypto"]
license = "MIT OR Apache-2.0"
name = "sodiumoxide2"
repository = "https://github.com/conradludgate/sodiumoxide"
categories = ["cryptography"]
version = "0.2.7"
exclude = [
    "**/.gitignore",
    ".github/*"
]
edition = "2021"

# [workspace]
# members = ["libsodium-sys", "testcrate"]

[dependencies]
# ed25519 = { version = "1", default-features = false }
serde = { version = "^1.0.59", default-features = false, optional = true }
subtle = "2"
zeroize = "1"
rand = "0.8"
hex = "0.4.3"
base64 = "0.21.0"
nix = "0.26.2"
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.1"
xsalsa20poly1305 = "0.9.0"
crypto_box = "0.8.2"
sha2 = "0.10.6"
chacha20 = "0.9.1"
salsa20 = "0.10.2"
x25519-dalek = { version = "1", default-features = false }
typenum = "1.16.0"
generic-array = "0.14.7"
blake2 = "0.10.6"
hmac = "0.12.1"

[dev-dependencies]
serde = "^1.0.59"
serde_json = "^1.0.17"
rmp-serde = "^0.13.7"

[features]
benchmarks = []
std = []
default = ["serde", "std"]
use-pkg-config = []
